* Bug #32655: fix host dropdown design and alignment
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47562 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/site.less
+++ b/management/univention-management-console-frontend/css/site.less
@@ -164,6 +164,15 @@ a {
 	}
 }
 
+.dj_ie8 .umc .umcHeader {
+.has-mozilla .umc .umcHeader {
+	.umcHeaderRight {
+		.umcHeaderText {
+			padding: 10px 0 5px 0;
+		}
+	}
+}
+
 /* make sure that the header menu are positioned correctly */
 div[dijitpopupparent=umcMenuHost],
 div[dijitpopupparent=umcMenuSettings],
